fea-rs/test-data/compile-tests/mini-latin/bad/chain_pos_references_gsub_lookup.fea
lookup dummy {
    sub a by A;
} dummy;

feature test {
    pos a' lookup dummy b;
} test;
